--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-website",
-  "homepage": "https://scoo.dev",
+  "homepage": "https://scs5.github.io/personal-website-old",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
